docs/vdpservice/versions/3.3/index.md
---
layout: page
title: Horizon webRTC Redirection SDK
hide:
  #- navigation
  - toc
---
---
layout: page
title: Horizon View Session Enhancement SDK v3.3
hide:
  #- navigation
  - toc
---

The Omnissa View Session Enhancement Software Development Kit (SDK) allows software engineers to write host-side and client-side applications and allow communications between a clients and remote desktop. The Session Enhancement SDK is comprised of a Remote Procedure Call (RPC) API and Overlay API.

The RPC API provides an asynchronous, callback driven communications channel between applications running on the remote desktop and a plugin running on the client endpoint. The RPC API also handles marshaling / un-marshaling of parameters. The Overlay API solves the problem of displaying rendered images on the client so that they appear to the user to be a local window on the remote desktop.

This SDK is free and public. To obtain technical support for the use of the SDK, please submit a Support Request (SR) via [Omnissa Customer Connect](https://customerconnect.omnissa.com/home) to get help from the Omnissa Global Customer Services (GCS).

## Downloads

Omnissa provides this Software Development Kit (the “Software”) to you subject to the following terms and conditions. By downloading, installing, or using the Software, you agree to be bound by the terms of [Omnissa SDK License Agreement](https://static.omnissa.com/sites/default/files/omnissa-sdk-agreement.pdf). If you disagree with any of the terms, then do not use the Software.

For additional information, please visit the [Omnissa Legal Center](https://www.omnissa.com/legal-center/).

The SDK is provided as either a [Package](https://github.com/orgs/euc-releases/packages?repo_name=horizon-vdpservice-sdk) or [Release](https://github.com/euc-releases/horizon-vdpservice-sdk/releases). Please download the software from the appropriate location.

## License

This software is licensed under the [Omnissa Software Development Kit (SDK) License Agreement](https://static.omnissa.com/sites/default/files/omnissa-sdk-agreement.pdf); you may not use this software except in compliance with the License.

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

This software may also utilize Third-Pary Open Source Software as detailed within the [open_source_licenses.txt](open_source_licenses.txt) file.


## Documentation and Reference

| Name | Size |	 
| --- | --- |
|Development Guides |  |
| [Omnissa Horizon Session Enhancement SDK Programming Guide](./versions/3.3/VMware-vdpService-sdk-programming-guide-3.3.0.pdf) | 1.1 MB	|

## Top Community Sample Code

| Name | Contributor | Language |
| --- | --- | --- |
| [Infrastructure Pain Points Overview](https://github.com/euc-dev/euc-samples/tree/main/Horizon-Samples/infrastructure-pain-points-overview) | VMkbruesch | vRealize Ops Dashboard |

